--- a/css/main.css
+++ b/css/main.css
@@ -1,102 +1,162 @@
-/******************************
-Flexbox Layout
-*******************************/
-
-.header, .nav {
-  display: flex;
-  flex-direction: column;
-}
-
-.header {
-  justify-content: space-between;
-}
-
-.nav {
-  flex: 1;
-  justify-content: space-around;
-}
-
-
-@media all and (min-width: 640px) {
-  .header, .nav {
-    flex-direction: row;
-  }
-}
-
-@media all and (min-width: 1030px) {
-  .nav {
-    flex: none;
-  }
-}
-
+/*
+It is following "Mobile First Approach"
+*/
 
 /******************************
-Additional Styling
+Base Styles
 *******************************/
+ *{
+  box-sizing:border-box;
+  padding:0 0 0 0;
+ }
 
-body {
-  margin: 0;
-  font-family: Helvetica;
+ body{
   background: #fafafa;
-}
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.6;
+  color:#7f7f7f;
+ }
 
-.header {
-  padding: 20px 0;
-  margin: 0 auto;
-}
-.about{
-  padding: 20px 0;
-  margin: 0 auto;
-}
+ img{
+  width: 100%;
+ }
 
-.about img{
-	float: right;
+ p,
+ h1,
+ h2,
+ h3{
 
-}
 
-.logo {
-  width: 195px;
-  padding-top: 10px;
-  font-size: 20px;
-}
+ }
 
-.nav {
-  list-style: none;
-}
 
-.nav li {
-  margin: 12px 0 12px 28px;
-}
-
-.nav li a {
+a {
   text-decoration: none;
-  font-size: 12px;
-  color: black;
+}
+
+ul {
+  list-style-type: none;
+}
+/******************************
+Base Layout Styles
+*******************************/
+
+/* ---- Navigation -----  */
+
+.name{
+  font-size: 1.80em;
+  color:#4a4a4a;
+}
+
+.name,
+.main-nav li{
+  text-align: center;
+  margin-top: 6px;
+  margin-bottom: 6px;
+}
+
+.name a,
+.main-nav a{
+  padding: 10px 15px;
+  text-align: center;
+  display: block;
+  text-transform: uppercase;
+  color:#4a4a4a;
   font-weight: bold;
+  background: white;
+}
+
+.main-nav a:hover{
+  color: white;
+  background: #4a4a4a;
+
+}
+
+
+.about-me{
+  text-align: center;
+  font-size: 0.95em;
+  padding: 5px;
+  font-weight: lighter;
+}
+
+ .about-me img{
+  width: 80%;
+ }
+
+.portfolio{
+  background: white;
+}
+
+.container h2{
+  text-transform: uppercase;
+  text-align: center;
+  color:#4a4a4a;
+  font-size: 1.0em;
+  padding: 40px;
+
+}
+
+
+.portfolio-item {
+  text-align: center;
+  font-weight: lighter;
+  font-size: 0.95em;
+  padding-bottom: 20px;
+}
+.portfolio-item h3{
+  color: black;
+  font-weight: normal;
+}
+
+.contact{
+  text-align: center;
+  font-weight: lighter;
+}
+
+
+
+.main-footer{
+  font-size: 0.95em;
+  margin-top: 20px;
+  line-height: 70px;
+  font-weight: bold;
+  color: black;
+}
+
+.footer-left{
+  float: left;
+}
+
+.footer-right{
+  float: right;
+}
+.footer-nav{
+  display: none;
+}
+.back-top-top{
   text-transform: uppercase;
 }
 
-.nav li a:hover {
-  color: grey;
-}
+/******************************
+Layout Container
+*******************************/
 
-.nav li:first-child a {
-  border-radius: 2px;
-  transition: 200ms ease-in-out;
-  padding: 8px 16px 7px;
-}
-
-.nav li:first-child a:hover {
-  color: grey;
-}
-
-@media all and (min-width: 1024px) {
-  .header {
-    width: 1024px;
-    min-width: 768px;
+.container {
+    width: 85%;
+    max-width: 1150px;
+    margin: 0 auto;
   }
-  .about {
-    width: 1024px;
-    min-width: 768px;
-  }
+
+/******************************
+Media Queries
+*******************************/
+
+@media (min-width: 1024px){
+
+}
+
+
+@media (min-width: 768px){
+  
 }
