--- a/css/main.css
+++ b/css/main.css
@@ -114,10 +114,16 @@ Base Layout Styles
   font-weight: lighter;
 }
 
+hr.seperate-style{
+  border: none;
+    height: 1px;
+    color: lightgrey; /* old IE */
+    background-color: lightgrey; /* Modern Browsers */
+}
 
 
 .main-footer{
-  font-size: 0.95em;
+  font-size: 0.75em;
   margin-top: 20px;
   line-height: 70px;
   font-weight: bold;
