--- a/css/main.css
+++ b/css/main.css
@@ -164,5 +164,76 @@ Media Queries
 
 
 @media (min-width: 768px){
-  
+  .container{
+    width:85%;
+    max-width:1023px;
+    margin: 0 auto;
+  }
+
+  .main-nav-container{
+    display: table;
+    text-align: center;
+}
+
+
+  .main-nav li{
+    display:inline-block;
+    margin: 0 auto;
+  }
+
+
+
+  .main-nav a{
+     background: transparent;
+  }
+
+.about-me{
+  text-align: left;
+}
+
+  .about-me img{
+    width: 300px;
+    float: right;
+    margin-right: 25px;
+    padding: 10px;
+    padding-top: 0px;
+  }
+
+
+  .portfolio-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;;
+  }
+
+  .portfolio-item{
+    flex-wrap: 1;
+    flex-basis: 300px;
+  }
+
+
+.footer-nav{
+display: table;
+}
+
+
+.footer-nav li{
+display: inline-block;
+text-transform: uppercase;
+padding-left:20px;
+text-decoration: none;
+}
+.footer-nav a{
+color:black;
+}
+.back-top-top{
+   display: none;
+}
+
+   .clearfix:after{
+    content:"";
+    display: table;
+    clear: both;
+
+   }
 }
