Completed the UI for 1024 screen
Completed the UI for 1024 screen

--- a/css/main.css
+++ b/css/main.css
@@ -1,149 +1,122 @@
 /*
 It is following "Mobile First Approach"
 */
-
 /******************************
 Base Styles
 *******************************/
- *{
-  box-sizing:border-box;
-  padding:0 0 0 0;
- }
 
- body{
-  background: #fafafa;
-  font-family: 'Open Sans', sans-serif;
-  line-height: 1.6;
-  color:#7f7f7f;
- }
-
- img{
-  width: 100%;
- }
-
- p,
- h1,
- h2,
- h3{
-
-
- }
-
-
-a {
-  text-decoration: none;
+* {
+    box-sizing: border-box;
+    padding: 0 0 0 0;
 }
-
+body {
+    background: #fafafa;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.6;
+    color: #7f7f7f;
+}
+img {
+    width: 100%;
+}
+p,
+h1,
+h2,
+h3 {} a {
+    text-decoration: none;
+}
 ul {
-  list-style-type: none;
+    list-style-type: none;
 }
 /******************************
 Base Layout Styles
 *******************************/
-
 /* ---- Navigation -----  */
 
-.name{
-  font-size: 1.80em;
-  color:#4a4a4a;
+.name {
+    font-size: 1.80em;
+    color: #4a4a4a;
 }
-
 .name,
-.main-nav li{
-  text-align: center;
-  margin-top: 6px;
-  margin-bottom: 6px;
+.main-nav li {
+    text-align: center;
+    margin-top: 6px;
+    margin-bottom: 6px;
 }
-
 .name a,
-.main-nav a{
-  padding: 10px 15px;
-  text-align: center;
-  display: block;
-  text-transform: uppercase;
-  color:#4a4a4a;
-  font-weight: bold;
-  background: white;
+.main-nav a {
+    padding: 10px 15px;
+    text-align: center;
+    display: block;
+    text-transform: uppercase;
+    color: #4a4a4a;
+    font-weight: bold;
+    background: white;
 }
-
-.main-nav a:hover{
-  color: white;
-  background: #4a4a4a;
-
+.main-nav a:hover {
+    color: white;
+    background: #4a4a4a;
 }
-
-
-.about-me{
-  text-align: center;
-  font-size: 0.95em;
-  padding: 5px;
-  font-weight: lighter;
+.about-me {
+    text-align: center;
+    font-size: 0.95em;
+    padding: 5px;
+    font-weight: lighter;
 }
-
- .about-me img{
-  width: 80%;
- }
-
-.portfolio{
-  background: white;
+.about-me img {
+    width: 80%;
 }
-
-.container h2{
-  text-transform: uppercase;
-  text-align: center;
-  color:#4a4a4a;
-  font-size: 1.0em;
-  padding: 40px;
-
+.portfolio {
+    background: white;
 }
-
-
+.container h2 {
+    text-transform: uppercase;
+    text-align: center;
+    color: #4a4a4a;
+    font-size: 1.0em;
+    padding: 40px;
+}
 .portfolio-item {
-  text-align: center;
-  font-weight: lighter;
-  font-size: 0.95em;
-  padding-bottom: 20px;
+    text-align: center;
+    font-weight: lighter;
+    font-size: 0.95em;
+    padding-bottom: 20px;
 }
-.portfolio-item h3{
-  color: black;
-  font-weight: normal;
+.portfolio-item h3 {
+    color: black;
+    font-weight: normal;
 }
-
-.contact{
-  text-align: center;
-  font-weight: lighter;
+.contact {
+    text-align: center;
+    font-weight: lighter;
 }
-
-hr.seperate-style{
-  border: none;
+hr.seperate-style {
+    border: none;
     height: 1px;
-    color: lightgrey; /* old IE */
-    background-color: lightgrey; /* Modern Browsers */
+    color: lightgrey;
+    /* old IE */
+    
+    background-color: lightgrey;
+    /* Modern Browsers */
 }
-
-
-.main-footer{
-  font-size: 0.75em;
-  margin-top: 20px;
-  line-height: 70px;
-  font-weight: bold;
-  color: black;
+.main-footer {
+    font-size: 0.75em;
+    margin-top: 20px;
+    line-height: 70px;
+    font-weight: bold;
+    color: black;
 }
-
-.footer-left{
-  float: left;
+.footer-left {
+    float: left;
 }
-
-.footer-right{
-  float: right;
+.footer-right {
+    float: right;
 }
-.footer-nav{
-  display: none;
+.footer-nav {
+    display: none;
 }
-.back-top-top{
-  text-transform: uppercase;
+.back-top-top {
+    text-transform: uppercase;
 }
-
 /******************************
 Layout Container
 *******************************/
@@ -152,88 +125,100 @@ Layout Container
     width: 85%;
     max-width: 1150px;
     margin: 0 auto;
-  }
-
+}
 /******************************
 Media Queries
 *******************************/
 
-@media (min-width: 1024px){
-
+@media (min-width: 768px) {
+    .container {
+        width: 85%;
+        max-width: 1023px;
+        margin: 0 auto;
+    }
+    .main-nav-container {
+        display: table;
+        text-align: center;
+    }
+    .main-nav li {
+        display: inline-block;
+        margin: 0 auto;
+    }
+    .main-nav a {
+        background: transparent;
+    }
+    .about-me {
+        text-align: left;
+    }
+    .about-me img {
+        width: 300px;
+        float: right;
+        margin-right: 25px;
+        padding: 10px;
+        padding-top: 0px;
+    }
+    .portfolio-item-img {
+        width: 300px;
+    }
+    .portfolio-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        ;
+    }
+    .portfolio-item {
+        flex-wrap: 1;
+        flex-basis: 300px;
+    }
+    .footer-nav {
+        display: table;
+    }
+    .footer-nav li {
+        display: inline-block;
+        text-transform: uppercase;
+        padding-left: 20px;
+        text-decoration: none;
+    }
+    .footer-nav a {
+        color: black;
+    }
+    .back-top-top {
+        display: none;
+    }
+    .clearfix:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
 }
+@media (min-width: 1024px) {
+    .name,
+    .main-nav {
+        display: inline;
+        margin: 0 auto;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    .name {
+        float: left;
+        font-size: 1.2em;
+    }
+    .main-nav {
+        float: right;
+        font-size: 0.8em;
+    }
+    .main-nav a {
+        background: transparent;
+    }
 
-
-@media (min-width: 768px){
-  .container{
-    width:85%;
-    max-width:1023px;
-    margin: 0 auto;
-  }
-
-  .main-nav-container{
-    display: table;
-    text-align: center;
-}
-
-
-  .main-nav li{
-    display:inline-block;
-    margin: 0 auto;
-  }
-
-
-
-  .main-nav a{
-     background: transparent;
-  }
-
-.about-me{
-  text-align: left;
-}
-
-  .about-me img{
-    width: 300px;
-    float: right;
-    margin-right: 25px;
-    padding: 10px;
-    padding-top: 0px;
-  }
-
-
-  .portfolio-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;;
-  }
-
-  .portfolio-item{
-    flex-wrap: 1;
-    flex-basis: 300px;
-  }
-
-
-.footer-nav{
-display: table;
-}
-
-
-.footer-nav li{
-display: inline-block;
-text-transform: uppercase;
-padding-left:20px;
-text-decoration: none;
-}
-.footer-nav a{
-color:black;
-}
-.back-top-top{
-   display: none;
-}
-
-   .clearfix:after{
-    content:"";
-    display: table;
-    clear: both;
-
-   }
+    .portfolio-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        ;
+    }
+    .portfolio-item {
+        flex-wrap: 1;
+        flex-basis: 250px;
+    }
 }
