--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,10 @@ h3 {} a {
 ul {
     list-style-type: none;
 }
+strong{
+  color: black;
+  font-weight: bold;
+}
 /******************************
 Base Layout Styles
 *******************************/
@@ -117,6 +121,11 @@ hr.seperate-style {
 .back-top-top {
     text-transform: uppercase;
 }
+
+.back-top-top a{
+    color:black;
+}
+
 /******************************
 Layout Container
 *******************************/
